# emews-project-creator

./: .gitignore  README.md  setup.cfg  tox.ini
emewscreator/: __init__.py  __main__.py  cli.py  generate.py  util.py  utils.py
emewscreator/templates/common/hooks/: post_gen_project.py
emewscreator/templates/common/j2s/common/: run_model_5_args_sh.j2  submission_args.j2
emewscreator/templates/emews/: cookiecutter.json
emewscreator/templates/emews/{{cookiecutter.emews_root_directory}}/: README.md
epc/: core.py  main.py  template.py
example_cfgs/: emews.yaml  eqpy.yaml  eqr.yaml  eqsql.yaml  sweep.yaml
templates/common/j2s/common/: submission_job_exports.j2
templates/common/j2s/eq/: eq_globals.j2  eq_obj.j2  eq_start.j2  submission.j2
templates/common/j2s/eqr/: eq_start.j2
templates/common/templates/: cfg.j2  submission_args.j2  submission_job_exports.j2  submission_prefix.j2
templates/emews/: template.json
templates/emews/base/: README.md
templates/emews/hooks/: post_gen_project.py
templates/eqr/: cookiecutter.json
templates/eqr/{{cookiecutter.emews_root_directory}}/swift/: {{cookiecutter.submit_wf_file_name}}.sh
templates/sweep/: cookiecutter.json
templates/sweep/{{cookiecutter.emews_root_directory}}/swift/: {{cookiecutter.submit_wf_file_name}}.sh  {{cookiecutter.sweep_wf_file}}.swift  {{cookiecutter.wf_file_name}}.swift
tests/: README.md  context.py  eqpy.yaml  eqr.yaml  me.R  sweep.yaml  test_core.py
tests/test_data/: bad.json  template.json
tests/test_template/: template.json
tests/test_template/t1/d2/: foo.py
(+18 files in other folders)
