[flake8]
ignore = E501

[metadata]
name = emewscreator
version = attr: emewscreator.__version__
license = BSD 3-Clause License
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Science/Research
    License :: OSI Approved :: BSD License
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Operating System :: Microsoft :: Windows
    Programming Language :: Python :: 3
    Topic :: Scientific/Engineering
    Topic :: System :: Distributed Computing
long_description = file: README.md
long_description_content_type = text/markdown
author = Nick Collier
author_email = ncollier@anl.gov
maintainer = Nick Collier
maintainer_email = ncollier@anl.gov
url = https://emews.github.io/index.html
project_urls =
    Bug Tracker = https://github.com/emews/emews-project-creator/issues
    Documentation = http://www.mcs.anl.gov/~emews/tutorial/
    Git Repository = https://github.com/emews/emews-project-creator
description = emewscreator simplifies the creation of emews workflows through the use of templates

[options]
packages = find:
python_requires = >=3.7

include_package_data = True

install_requires = 
    cookiecutter
    click
    pyyaml
    eqsql
    colorama

[options.entry_points]
console_scripts =
    emewscreator=emewscreator.cli:cli
